resources/daemon-sets.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    repo: https://github.com/charlesthomas/homelab-longhorn
  labels:
    app: longhorn-manager
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
  name: longhorn-manager
  namespace: longhorn
spec:
  selector:
    matchLabels:
      app: longhorn-manager
  template:
    metadata:
      annotations:
        repo: https://github.com/charlesthomas/homelab-longhorn
      labels:
        app: longhorn-manager
        app.kubernetes.io/instance: longhorn
        app.kubernetes.io/name: longhorn
    spec:
      containers:
        - command:
            - longhorn-manager
            - -d
            - daemon
            - --engine-image
            - longhornio/longhorn-engine:v1.7.2
            - --instance-manager-image
            - longhornio/longhorn-instance-manager:v1.7.2
            - --share-manager-image
            - longhornio/longhorn-share-manager:v1.7.2
            - --backing-image-manager-image
            - longhornio/backing-image-manager:v1.7.2
            - --support-bundle-manager-image
            - longhornio/support-bundle-kit:v0.0.45
            - --manager-image
            - longhornio/longhorn-manager:v1.7.2
            - --service-account
            - longhorn-service-account
            - --upgrade-version-check
          image: longhornio/longhorn-manager:v1.9.0
          imagePullPolicy: IfNotPresent
          name: longhorn-manager
          ports:
            - containerPort: 9500
              name: manager
            - containerPort: 9501
              name: conversion-wh
            - containerPort: 9502
              name: admission-wh
            - containerPort: 9503
              name: recov-backend
          readinessProbe:
            httpGet:
              path: /v1/healthz
              port: 9501
              scheme: HTTPS
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /host/boot/
              name: boot
            - mountPath: /host/dev/
              name: dev
            - mountPath: /host/proc/
              name: proc
            - mountPath: /var/lib/longhorn/
              mountPropagation: Bidirectional
              name: longhorn
            - mountPath: /tls-files/
              name: longhorn-grpc-tls
        - command:
            - sh
            - -c
            - echo share-manager image pulled && sleep infinity
          image: longhornio/longhorn-share-manager:v1.7.2
          imagePullPolicy: IfNotPresent
          name: pre-pull-share-manager-image
      priorityClassName: longhorn-critical
      serviceAccountName: longhorn-service-account
      volumes:
        - hostPath:
            path: /boot/
          name: boot
        - hostPath:
            path: /dev/
          name: dev
        - hostPath:
            path: /proc/
          name: proc
        - hostPath:
            path: /var/lib/longhorn/
          name: longhorn
        - name: longhorn-grpc-tls
          secret:
            optional: true
            secretName: longhorn-grpc-tls
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 100%
