resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    repo: https://github.com/charlesthomas/homelab-longhorn
  labels:
    app: longhorn-admission-webhook
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
  name: longhorn-admission-webhook
  namespace: longhorn
spec:
  ports:
    - name: admission-webhook
      port: 9502
      targetPort: admission-wh
  selector:
    longhorn.io/admission-webhook: longhorn-admission-webhook
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    repo: https://github.com/charlesthomas/homelab-longhorn
  labels:
    app: longhorn-manager
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
  name: longhorn-backend
  namespace: longhorn
spec:
  ports:
    - name: manager
      port: 9500
      targetPort: manager
  selector:
    app: longhorn-manager
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    repo: https://github.com/charlesthomas/homelab-longhorn
  labels:
    app: longhorn-conversion-webhook
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
  name: longhorn-conversion-webhook
  namespace: longhorn
spec:
  ports:
    - name: conversion-webhook
      port: 9501
      targetPort: conversion-wh
  selector:
    longhorn.io/conversion-webhook: longhorn-conversion-webhook
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    repo: https://github.com/charlesthomas/homelab-longhorn
  labels:
    app: longhorn-ui
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
  name: longhorn-frontend
  namespace: longhorn
spec:
  ports:
    - name: http
      nodePort: null
      port: 80
      targetPort: http
  selector:
    app: longhorn-ui
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    repo: https://github.com/charlesthomas/homelab-longhorn
  labels:
    app: longhorn-recovery-backend
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
  name: longhorn-recovery-backend
  namespace: longhorn
spec:
  ports:
    - name: recovery-backend
      port: 9503
      targetPort: recov-backend
  selector:
    longhorn.io/recovery-backend: longhorn-recovery-backend
  type: ClusterIP
