resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  annotations:
    external-dns.alpha.kubernetes.io/hostname: longhorn.crt.house
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "longhorn.crt.house"
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
      - longhorn.crt.house
